update that has error

--- a/Forms/frm_SPayments.resx
+++ b/Forms/frm_SPayments.resx
@@ -7248,6 +7248,12 @@
   <data name="&gt;&gt;TabControl1.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <metadata name="Ds_sParticulars.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="TblseniorfeesBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>149, 17</value>
+  </metadata>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -7310,6 +7316,18 @@
   </data>
   <data name="&gt;&gt;LineShape4.Type" xml:space="preserve">
     <value>Microsoft.VisualBasic.PowerPacks.LineShape, Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="&gt;&gt;Ds_sParticulars.Name" xml:space="preserve">
+    <value>Ds_sParticulars</value>
+  </data>
+  <data name="&gt;&gt;Ds_sParticulars.Type" xml:space="preserve">
+    <value>LCC_SAMS_Project.ds_sParticulars, ds_sParticulars.Designer.vb.dll, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;TblseniorfeesBindingSource.Name" xml:space="preserve">
+    <value>TblseniorfeesBindingSource</value>
+  </data>
+  <data name="&gt;&gt;TblseniorfeesBindingSource.Type" xml:space="preserve">
+    <value>System.Windows.Forms.BindingSource, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>frm_SPayments</value>
