--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -118,14 +118,26 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="340px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\340px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="dlg_existed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dlg_existed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="updatefeesicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\updatefeesicon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="savesuccessfully1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\savesuccessfully2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="500x5001" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\500x5001.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="500x500" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\500x500.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="updateuser" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\updateuser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scholarship_add_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\scholarship_add_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="addstudentsicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\addstudentsicon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,14 +166,11 @@
   <data name="500x5002" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\500x5002.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="dlg_studentsupdatedsuccessfully" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dlg_studentsupdatedsuccessfully1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="scholarship_update_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\scholarship_update_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="490" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\490.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="lcc-logo-11-3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\lcc-logo-11-3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="loginerroricon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\loginerroricon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -169,11 +178,11 @@
   <data name="dlg_logouticon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dlg_logouticon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="500x500" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\500x500.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="lcc-logo-11-3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lcc-logo-11-3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="340px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\340px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="updatefeesicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\updatefeesicon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="fillupform" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fillupform.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -181,8 +190,8 @@
   <data name="savesuccessfully" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\savesuccessfully1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="savesuccessfully1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\savesuccessfully2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="dlg_studentsupdatedsuccessfully" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dlg_studentsupdatedsuccessfully1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="v1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\v1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -207,5 +216,8 @@
   </data>
   <data name="addfeesicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\addfeesicon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="adduser" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\adduser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
